--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-scripts": "4.0.3",
     "urix": "^0.1.0"
   },
+  "optionalDependencies": {
+    "fsevents": "1.2.13"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
