--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "urix": "^0.1.0",
-    "fsevents": "1.2.13"
-  },
-  "optionalDependencies": {
-    "fsevents": "1.2.13"
+    "urix": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
